# IconTheGreat.github.io

./: Cargo.toml  LICENSE  README.md  config.toml
content/: about.md  build-deflationary-erc20.md  hello-word.md  license.md  sample-post.md
docs/: about.html  index.html  license.html  posts.html  sitemap.xml
docs/assets/: prism-custom-theme.css  styles.css
docs/assets/prism/: prism.min.js
docs/posts/: build-a-deflationary-erc20-token-from-scratch-no-dependencies.html  hello-world.html  the-art-of-writing.html
public/: index.html  license.html
public/assets/: styles.css
src/: main.rs  markdown.rs  server.rs
