[package]
name = "xeniria"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
pulldown-cmark = "0.12.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tiny_http = "0.12.0"
toml = "0.7"
slug = "0.1.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
image = "0.25"
reqwest = { version = "0.11", features = ["blocking"] }
